# gtfold

./: README
gtfold-mfe/: Makefile  Makefile.in  README  configure  configure.in  createsymlinks.sh
gtfold-mfe/data/: Makefile  Makefile.am  Makefile.in
gtfold-mfe/data/Andronescu/: Makefile
gtfold-mfe/data/Turner04/: Makefile
gtfold-mfe/data/Turner99/: Makefile  Makefile.am  Makefile.in
gtfold-mfe/include/: Makefile  Makefile.am  Makefile.in  MyDouble_copy.h  algorithms-partition.h  algorithms.h  constraints.h  energy.h  global.h  key.h  loader.h  mfe_main.h  options.h  partition-func-d2.h  partition-func.h  pf-shel-check.h  stochastic-sampling-d2.h  stochastic-sampling.h  subopt_traceback.h  traceback.h  utils.h
gtfold-mfe/src/: Makefile  Makefile.am  Makefile.in  MyDouble.cc  algorithms-partition.c  algorithms.c  boltzmann_main.cc  constraints.cc  constraints.txt  energy.c  global.c  global.cc  key.cc  loader.cc  main.cc  mfe_main.cc  options.cc  partition-func-d2.cc  partition-func.c  pf-shel-check.cc  shapereader.cc  stochastic-sampling-d2.cc  stochastic-sampling.cc  subopt_main.cc  subopt_traceback.cc  test_ss_constraint.c  traceback.c
gtfold-mfe/src/.deps/: energy.Po  global.Po  loader.Po
gtfold-mfe/tests/config/: test-list.conf  test-params.conf
gtfold-mfe/tests/scripts/: CompareGTCTwithUNACT.pm  ConstraintsVerification.pm  PfProbSum.pm  (+6 more)
pf-shel-check/: notes  pf-shel-check.cc  pf-shel-check.h
rna-scoring/: LoopScoring.c  Makefile  PFtest.cc  RNAScoring  RNAScoring.cc  StructureReader  StructureReader.c  TreeScoring.c  options.c  options.h
(+43 files in other folders)
