## Process this file with automake to produce Makefile.in

gtfold_datadir = $(datadir)/@PACKAGE@/Turner99

gtfold_data_DATA = \
	stack.DAT\
	miscloop.DAT\
	dangle.DAT\
	loop.DAT\
	int11.DAT\
	int21.DAT\
	int22.DAT\
	sint2.DAT\
	sint4.DAT\
	tloop.DAT\
	tstackh.DAT\
	tstacki.DAT\
	tstackm.DAT\
	stack.dat\
	miscloop.dat\
	dangle.dat\
	loop.dat\
	asint1x2.dat\
	coaxial.dat\
	coaxstack.dat\
	int11.dat\
	int21.dat\
	int22.dat\
	sint2.dat\
	sint4.dat\
	tloop.dat\
	triloop.dat\
	tstack.dat\
	tstackcoax.dat\
	tstackh.dat\
	tstacki.dat\
	tstackm.dat



EXTRA_DIST = $(gtfold_data_DATA)

CLEANFILES = *~

